{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 9,
  "lineage": "0a3e314e-db5c-995a-f016-b5cd817881b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851509662501:internet-gateway/igw-0fb8697912bd33a40",
            "id": "igw-0fb8697912bd33a40",
            "owner_id": "851509662501",
            "tags": {
              "Name": "CyberRange-IGW"
            },
            "tags_all": {
              "Name": "CyberRange-IGW"
            },
            "vpc_id": "vpc-057d6e249dffa0709"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851509662501:route-table/rtb-0334b5cf58642ec79",
            "id": "rtb-0334b5cf58642ec79",
            "owner_id": "851509662501",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PrivateRouteTable"
            },
            "tags_all": {
              "Name": "PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-057d6e249dffa0709"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851509662501:route-table/rtb-0fda430be9ae3190f",
            "id": "rtb-0fda430be9ae3190f",
            "owner_id": "851509662501",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fb8697912bd33a40",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CyberRange-PublicRT"
            },
            "tags_all": {
              "Name": "CyberRange-PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-057d6e249dffa0709"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MyIGW",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d109c6613cd825ae",
            "route_table_id": "rtb-0334b5cf58642ec79",
            "subnet_id": "subnet-0e3a4d5e785755327"
          },
          "dependencies": [
            "aws_route_table.privatert",
            "aws_subnet.private-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03691e7626657322f",
            "route_table_id": "rtb-0fda430be9ae3190f",
            "subnet_id": "subnet-01cf8d5238d21ed35"
          },
          "dependencies": [
            "aws_internet_gateway.MyIGW",
            "aws_route_table.publicrt",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851509662501:subnet/subnet-0e3a4d5e785755327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3a4d5e785755327",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851509662501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CyberRange-PrivateSubnet"
            },
            "tags_all": {
              "Name": "CyberRange-PrivateSubnet"
            },
            "vpc_id": "vpc-057d6e249dffa0709"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851509662501:subnet/subnet-01cf8d5238d21ed35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cf8d5238d21ed35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851509662501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CyberRange-PublicSubnet"
            },
            "tags_all": {
              "Name": "CyberRange-PublicSubnet"
            },
            "vpc_id": "vpc-057d6e249dffa0709"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851509662501:vpc/vpc-057d6e249dffa0709",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0292677412bb83f12",
            "default_route_table_id": "rtb-06928bf1d341fcf88",
            "default_security_group_id": "sg-013f8d09373c82de3",
            "dhcp_options_id": "dopt-0ff803cf4d41c89b2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-057d6e249dffa0709",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06928bf1d341fcf88",
            "owner_id": "851509662501",
            "tags": {
              "Name": "CyberRange-VPC"
            },
            "tags_all": {
              "Name": "CyberRange-VPC"
            }
          }
        }
      ]
    }
  ]
}